--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home</title>
     <!-- link css -->
-    <link rel="stylesheet" href="./assets/scss/main.scss">
+    <link rel="stylesheet" href="../scss/blocks/_about_header.scss">
 </head>
 
 <body>
@@ -17,9 +17,9 @@
                 <img src="./assets/images/header_logo.svg" alt="">
                 <nav>
                     <ul class="header_list">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="./assets/pages/about.html">About us</a></li>
-                        <li><a href="./assets/pages/Create.html">Create your plan</a></li>
+                        <li><a href="../../index.html">Home</a></li>
+                        <li><a href="#">About us</a></li>
+                        <li><a href="./Create.html">Create your plan</a></li>
                     </ul>
                 </nav>
 
