--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
+    <title>about</title>
     <!-- link css -->
-    <link rel="stylesheet" href="../scss/blocks/_about_header.scss">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="container">
             <div class="header_content">
-                <img src="./assets/images/header_logo.svg" alt="">
+                <img src="../images/header_logo.svg" alt="">
                 <nav>
                     <ul class="header_list">
                         <li><a href="../../index.html">Home</a></li>
