--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home</title>
     <!-- link css -->
-    <link rel="stylesheet" href="./assets/scss/main.scss">
+    <link rel="stylesheet" href="./assets/css/main.css">
+    <!-- link fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -14,7 +20,9 @@
     <header class="header">
         <div class="container">
             <div class="header_content">
-                <img src="./assets/images/header_logo.svg" alt="">
+                <div class="header_img">
+                    <img src="./assets/images/header_logo.svg" alt="">
+                </div>
                 <nav>
                     <ul class="header_list">
                         <li><a href="#">Home</a></li>
@@ -22,7 +30,6 @@
                         <li><a href="./assets/pages/Create.html">Create your plan</a></li>
                     </ul>
                 </nav>
-
             </div>
         </div>
     </header>
